[gd_scene load_steps=7 format=3 uid="uid://cctrepqj08p47"]

[ext_resource type="Script" uid="uid://ccql1gqesskr7" path="res://Platooning/TacticalDeciders/infantry_attack_planner.gd" id="1_yvglf"]
[ext_resource type="Script" uid="uid://cau6j0o0julfq" path="res://addons/godot_state_charts/state_chart.gd" id="2_k2rqa"]
[ext_resource type="Script" uid="uid://bou0yn8lpwcuh" path="res://addons/godot_state_charts/compound_state.gd" id="3_m8mlq"]
[ext_resource type="Script" uid="uid://dyiggrr357tov" path="res://addons/godot_state_charts/atomic_state.gd" id="4_b4ktm"]
[ext_resource type="Script" uid="uid://m8bym6l05tkl" path="res://addons/godot_state_charts/transition.gd" id="5_j5p14"]
[ext_resource type="Script" uid="uid://dtlmgewt76wtf" path="res://addons/godot_state_charts/parallel_state.gd" id="6_jexg7"]

[node name="InfantryAttackPlanner" type="Node2D"]
script = ExtResource("1_yvglf")

[node name="Behavior" type="Node" parent="."]
script = ExtResource("2_k2rqa")
metadata/_custom_type_script = "uid://cau6j0o0julfq"

[node name="CompoundState" type="Node" parent="Behavior"]
script = ExtResource("3_m8mlq")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Idle" type="Node" parent="Behavior/CompoundState"]
script = ExtResource("4_b4ktm")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="attack" type="Node" parent="Behavior/CompoundState/Idle"]
script = ExtResource("5_j5p14")
to = NodePath("../../MovementAndShooting")
event = &"attack"
delay_in_seconds = "0.0"

[node name="MovementAndShooting" type="Node" parent="Behavior/CompoundState"]
script = ExtResource("6_jexg7")
metadata/_custom_type_script = "uid://dtlmgewt76wtf"

[node name="FollowEnemy" type="Node" parent="Behavior/CompoundState/MovementAndShooting"]
script = ExtResource("4_b4ktm")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="Fight" type="Node" parent="Behavior/CompoundState/MovementAndShooting"]
script = ExtResource("3_m8mlq")
initial_state = NodePath("Ready")
metadata/_custom_type_script = "uid://bou0yn8lpwcuh"

[node name="Ready" type="Node" parent="Behavior/CompoundState/MovementAndShooting/Fight"]
script = ExtResource("4_b4ktm")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="fight" type="Node" parent="Behavior/CompoundState/MovementAndShooting/Fight/Ready"]
script = ExtResource("5_j5p14")
to = NodePath("../../Fighting")
event = &"ready_to_fight"
delay_in_seconds = "0.0"

[node name="Fighting" type="Node" parent="Behavior/CompoundState/MovementAndShooting/Fight"]
script = ExtResource("4_b4ktm")
metadata/_custom_type_script = "uid://dyiggrr357tov"

[node name="stop" type="Node" parent="Behavior/CompoundState/MovementAndShooting"]
script = ExtResource("5_j5p14")
to = NodePath("../../Idle")
event = &"stop"
delay_in_seconds = "0.0"

[connection signal="taken" from="Behavior/CompoundState/Idle/attack" to="." method="_on_attack_taken"]
[connection signal="state_processing" from="Behavior/CompoundState/MovementAndShooting/FollowEnemy" to="." method="_on_follow_enemy_state_processing"]
[connection signal="taken" from="Behavior/CompoundState/MovementAndShooting/Fight/Ready/fight" to="." method="_on_fight_taken"]
